feat(BE-017): AssetSpecParser — manifest-driven facade + LayerBinding + inheritsFrom
- domain/model/asset/LayerBinding    — value object: layerId + behaviorId + params
- domain/model/asset/AssetId         — typed wrapper for asset identity (entityType+entityName)
- domain/model/asset/AssetSpec       — extended: inheritsFrom(Optional<AssetId>),
  bindings(List<LayerBinding>); backward-compat canonical constructor preserved
- infrastructure/parser/AssetSpecParser — manifest-driven facade:
  parse(Path xmlPath)  — single spec from disk path
  parse(InputStream, String) — single spec from stream
  loadAll(SpecsSource) — reads specs-manifest.xml via SpecsManifestReader,
    returns all non-abstract AssetSpec; no hardcoded entity names (§5.2)
- tests: AssetSpecParserTests (parse layers, animations, inheritsFrom, bindings)

Ref: java-developer-skill.md §3.2, §5.2, §5.5. TASK-BE-016, TASK-BE-017.